# Shukuchi

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt  README.md
engine/include/: engine.h  gguf_reader.h  kv_cache.h  metal_ops.h  model_loader.h  ops.h  prefetch.h
engine/metal/: matmul_q4k.metal
engine/src/: engine.c  gguf_reader.c  kv_cache.c  llama_tensor_map.c  main.c  metal_ops.m  model_loader.c  ops.c  prefetch.c
engine/tests/: gguf_dump.c  kv_cache_test.c  metal_probe.m  ops_test.c  prefetch_test.c
include/: lstr_format.h
model_packer/: CMakeLists.txt  README.md
model_packer/include/: packer.h
model_packer/src/: main.c  packer.c
